# llm-system-benchmarks

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
inference/: README.md  continuous_batching_bench.py  prefill_blocking_bench.py  run_continuous_batching_bench.sh  run_prefill_blocking_bench.sh  run_speculative_decoding_bench.sh  setup_inference_env.sh  speculative_decoding_bench.py
inference/ensemble/triton_on_mac/: Dockerfile  README.md  test_client.py
inference/ensemble/triton_on_mac/ensemble_model/: config.pbtxt
preprocessing/: __init__.py
preprocessing/benchmarks/: BLOG.md  README.md  __init__.py  run.py  run_benchmarks.sh  suite.py
preprocessing/benchmarks/common/: __init__.py  config.py  data_classes.py  data_generators.py  system_monitor.py  utils.py  workers.py
preprocessing/benchmarks/experiments/: __init__.py  exp1_baseline.py  exp2_scaling.py  exp3_concurrency.py  exp4_threading.py  exp5_vllm_latency_wall.py  exp6_sglang_radix_latency.py  exp7_sidecar_latency.py
preprocessing/benchmarks/visualization/: __init__.py  exp7_sidecar_plot.py  plots.py
training/: LLM_TRAINING_INTERNALS.md  README.md  train_distributed_node.py  train_single_node_baseline.py
training/analysis/: DATA_PIPELINE_REPORT.md  dataloader_bottleneck_simulation.py  io_benchmark_utils.py  padding_tax_simulation.py  pcie_transfer_bottleneck.py  profile_trace_analyzer.py  random_vs_seq_dataloader_simulation.py  random_vs_seq_python_simulation.py  streaming_loader_lib_profiling.py
training/distributed/: ddp_fsdp_oom_demo.py  profile_distributed.py  run_profiling_experiments.sh  train_distributed_node.py  train_single_node_baseline.py
training/helper/: __init__.py  check_gpu_info.py  profiler_analyzer.py
(+8 files in other folders)
