[project]
name = "llm-system-benchmarks"
version = "0.1.0"
description = "Benchmarking suite for LLM systems and internals - analyzing preprocessing bottlenecks, GIL constraints, and optimization strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "mosaicml-streaming>=0.10.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.21.3,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
